# PakSentiment-data-gateway

fast-api/: pyproject.toml
main-server/: package.json
scraper/: pyproject.toml
scraper/scraper/: reddit-scraper.py  twetter-scraper.py
scraper/scraper/config/: .secrets.toml
