[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Asim",email = "asimqwe2@gmail.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "fast_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
