[project]
name = "scraper"
version = "0.1.0"
description = "This package will contains all the modules related to the media scrapper we will use to power the PakSentiment social media and public data from the internet."
authors = [
    {name = "Muhammad Asim",email = "asimqwe2@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "praw (>=7.8.1,<8.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
flake8 = "^7.3.0"
pytest-asyncio = "^1.2.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
